# naja-bazel

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  chisel.bzl  constraints.sdc  naja_edit.py  requirements.in  requirements_lock_3_13.txt
.github/workflows/: run.yml  runDebug.yml
src/main/scala/: RetimeFanout.scala
