load("@bazel-orfs//:openroad.bzl", "orfs_flow")
load("@bazel_naja_rules_python//python:pip.bzl", "compile_pip_requirements")
load("chisel.bzl", "chisel_binary")

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    python_version = "3.13",
    requirements_txt = "requirements_lock_3_13.txt",
)

orfs_flow(
    name = "RetimeFanout",
    arguments = {
        "PLACE_PINS_ARGS": "-annealing",
        "PLACE_DENSITY": "0.30",
        "CORE_UTILIZATION": "0.30",
        "PWR_NETS_VOLTAGES": "",
        "GND_NETS_VOLTAGES": "",
    },
    sources = {
        "SDC_FILE": [":constraints.sdc"]
    },
    verilog_files = [
        ":genverilog",
    ],
)

chisel_binary(
    name = "generate_verilog",
    srcs = glob(["src/main/scala/**/*.scala"]),
    main_class = "GenerateRetimeFanout",
    #resources = glob(["src/main/resources/**/*"]),
    deps = [
        "@openroad_maven//:com_github_scopt_scopt_2_13",
    ],
)

genrule(
    name = "genverilog",
    srcs = [],
    outs = ["array.sv"],
    cmd = "$(execpath :generate_verilog) --firtool-binary-path $(execpath @circt//:bin/firtool) -- --default-layer-specialization=disable -o $(location :array.sv)",
    tools = [
        ":generate_verilog",
        "@circt//:bin/firtool",
    ],
)
